# CppLibrary

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindCubicSpline.cmake  FindEigen3.cmake
contrib/eigen3/share/pkgconfig/: eigen3.pc
data/: plot.py
doc/: Cubic Spline C++ Implementation.md
src/app/: CMakeLists.txt
src/app/cubic_spline/: CMakeLists.txt  test.cpp
src/app/io/: CMakeLists.txt  Makefile  test  test.cpp
src/app/linalg/: CMakeLists.txt  test.cpp
src/core/: CMakeLists.txt  cubic_spline.h
src/core/cubic_spline/: CMakeLists.txt  cubic_spline.cpp  cubic_spline.h
src/core/integrate/: integrate.h
src/core/interpolate/: interpolate.h
src/core/io/: CMakeLists.txt  io.cpp  io.h
src/core/linalg/: CMakeLists.txt  linalg.cpp  linalg.h
src/core/misc/: misc.h
src/core/optimize/: optimize.h
tests/cubic_spline/: check.py
